(SIMP-1054) Update static assets to fix spec tests
Before this patch, this module would fail its spec tests when
`STRICT_VARIABLES=yes` is set (as it is in Travis CI tests).
This was caused by the presence of the unset (and unused) variable
"spec_title" in the modules' fixture hieradata/hiera.yaml.

This commit fixes the issue by removing "spec_title" from
each module's hieradata/hiera.yaml.

SIMP-1054 #comment Fixed pupmod-simp-libvirt
SIMP-1079 #commented converted spec tests from `should` to `expect`
SIMP-1079 #commented sanitized template logic
SIMP-1079 #commented Added `on_supported_os` logic to spec tests
SIMP-1079 #commented bumped version to `4.1.1`
SIMP-1079 #close Fixed spec failures when `STRICT_VARIABLES=yes`

Change-Id: I720108c43906cc824de2ec4995033a675261dfbd

--- a/templates/ksmtuned.erb
+++ b/templates/ksmtuned.erb
@@ -10,7 +10,7 @@ t_ksm_npages_max = @ksm_npages_max.dup
 if t_ksm_npages_max.eql?('shmall') then
   t_ksm_npages_max = @shmall
 end
-  
+
 -%>
 # This file is managed by Puppet.
 # Any changes made to this file will be rewritten at the next Puppet run.
@@ -22,10 +22,10 @@ KSM_NPAGES_DECAY=<%= @ksm_npages_decay %>
 KSM_NPAGES_MIN=<%= t_ksm_npages_min %>
 KSM_NPAGES_MAX=<%= t_ksm_npages_max %>
 
-<% if not ksm_thres_coef.empty? then -%>
+<% if not @ksm_thres_coef.empty? then -%>
 KSM_THRES_COEF=<%= @ksm_thres_coef %>
 <% end -%>
-<% if not ksm_thres_const.empty? then -%>
+<% if not @ksm_thres_const.empty? then -%>
 KSM_THRES_CONST=<%= @ksm_thres_const %>
 <% end -%>
 
