--- a/templates/newvm.erb
+++ b/templates/newvm.erb
@@ -2,11 +2,11 @@
 
 <%
 t_vinst_command = "/usr/bin/virt-install"
-t_vinst_command += " -n \"#{name}\""
-t_vinst_command += " -r #{mem}"
+t_vinst_command += " -n \"#{@name}\""
+t_vinst_command += " -r #{@mem}"
 t_vinst_command += " --noautoconsole"
-t_vinst_command += " --os-variant=#{osvariant}"
-t_vinst_command += " --os-type=#{ostype}"
+t_vinst_command += " --os-variant=#{@osvariant}"
+t_vinst_command += " --os-type=#{@ostype}"
 
 if not @networks.empty? then
   used_mac_addr = false
@@ -22,11 +22,11 @@ if not @networks.empty? then
       )
     end
 
-    t_vinst_command += " -w #{t_network['type']}:#{t_network['target']}"
-    t_network['model'] and t_vinst_command += ",model=#{t_network['model']}"
+    t_vinst_command += " -w #{@t_network['type']}:#{@t_network['target']}"
+    t_network['model'] and t_vinst_command += ",model=#{@t_network['model']}"
 
     if t_network['mac'] then
-      t_vinst_command += ",mac=#{t_network['mac']}"
+      t_vinst_command += ",mac=#{@t_network['mac']}"
     elsif !@mac_addr.empty? and !used_mac_addr then
       t_vinst_command += ",mac=#{@mac_addr}"
       used_mac_addr = true
@@ -51,13 +51,13 @@ t_valid_vcpu_options = ['maxvcpus','sockets','cores','threads']
 # Validate that all of the vcpu options passed are valid.
 if !@vcpu_options.empty? and !(@vcpu_options.keys - t_valid_vcpu_options).empty? then
   raise Puppet::ParseError.new(
-    "Error: vcpu_options was passed an invalid option. Valid options include '#{t_valid_vcpu_options.join(', ')}'"
+    "Error: vcpu_options was passed an invalid option. Valid options include '#{@t_valid_vcpu_options.join(', ')}'"
   )
 end
 
 if not @vcpu_options.empty? then
   t_valid_vcpu_options.each do |t_valid_vcpu_option|
-  @vcpu_options[t_valid_vcpu_option] and t_vinst_command += ",#{t_valid_vcpu_option}=#{@vcpu_options[t_valid_vcpu_option]}"
+  @vcpu_options[t_valid_vcpu_option] and t_vinst_command += ",#{@t_valid_vcpu_option}=#{@vcpu_options[t_valid_vcpu_option]}"
   end
 end
 
@@ -119,7 +119,7 @@ t_sec_type = ['static','dynamic']
 if not @security.empty? then
   if not t_sec_type.include?(@security['type']) then
     raise Puppet::ParseError.new(
-      "Error: 'security' => 'type' must be one of '#{t_sec_type.join(", ")}'"
+      "Error: 'security' => 'type' must be one of '#{@t_sec_type.join(", ")}'"
     )
   end
 
@@ -147,7 +147,7 @@ end
 if not @disk_opts.empty? then
   t_disk_opts.each do |t_disk_opt|
     if @disk_opts[t_disk_opt] then
-      t_vinst_command += ",#{t_disk_opt}=#{@disk_opts[t_disk_opt]}"
+      t_vinst_command += ",#{@t_disk_opt}=#{@disk_opts[t_disk_opt]}"
     end
   end
 end
@@ -175,11 +175,11 @@ if @noacpi.to_s.eql?('true') then
 end
 
 if !@virt_type.empty? then
-    t_vinst_command += " --virt-type #{virt_type}"
+    t_vinst_command += " --virt-type #{@virt_type}"
 end
 
 if !@host_device.empty? then
-    t_vinst_command += " --host-device #{host_device}"
+    t_vinst_command += " --host-device #{@host_device}"
 end
 
 if not @watchdog.empty? then
