--- a/templates/newvm.erb
+++ b/templates/newvm.erb
@@ -22,11 +22,11 @@ if not @networks.nil? then
       )
     end
 
-    t_vinst_command += " -w #{@t_network['type']}:#{@t_network['target']}"
-    t_network['model'] and t_vinst_command += ",model=#{@t_network['model']}"
+    t_vinst_command += " -w #{t_network['type']}:#{t_network['target']}"
+    t_network['model'] and t_vinst_command += ",model=#{t_network['model']}"
 
     if t_network['mac'] then
-      t_vinst_command += ",mac=#{@t_network['mac']}"
+      t_vinst_command += ",mac=#{t_network['mac']}"
     elsif !@mac_addr.nil? and !used_mac_addr then
       t_vinst_command += ",mac=#{@mac_addr}"
       used_mac_addr = true
@@ -51,13 +51,13 @@ t_valid_vcpu_options = ['maxvcpus','sockets','cores','threads']
 # Validate that all of the vcpu options passed are valid.
 if !@vcpu_options.nil? and !(@vcpu_options.keys - t_valid_vcpu_options).nil? then
   raise Puppet::ParseError.new(
-    "Error: vcpu_options was passed an invalid option. Valid options include '#{@t_valid_vcpu_options.join(', ')}'"
+    "Error: vcpu_options was passed an invalid option. Valid options include '#{t_valid_vcpu_options.join(', ')}'"
   )
 end
 
 if not @vcpu_options.nil? then
   t_valid_vcpu_options.each do |t_valid_vcpu_option|
-  @vcpu_options[t_valid_vcpu_option] and t_vinst_command += ",#{@t_valid_vcpu_option}=#{@vcpu_options[t_valid_vcpu_option]}"
+  @vcpu_options[t_valid_vcpu_option] and t_vinst_command += ",#{t_valid_vcpu_option}=#{@vcpu_options[t_valid_vcpu_option]}"
   end
 end
 
@@ -119,7 +119,7 @@ t_sec_type = ['static','dynamic']
 if not @security.nil? then
   if not t_sec_type.include?(@security['type']) then
     raise Puppet::ParseError.new(
-      "Error: 'security' => 'type' must be one of '#{@t_sec_type.join(", ")}'"
+      "Error: 'security' => 'type' must be one of '#{t_sec_type.join(", ")}'"
     )
   end
 
@@ -147,7 +147,7 @@ end
 if not @disk_opts.nil? then
   t_disk_opts.each do |t_disk_opt|
     if @disk_opts[t_disk_opt] then
-      t_vinst_command += ",#{@t_disk_opt}=#{@disk_opts[t_disk_opt]}"
+      t_vinst_command += ",#{t_disk_opt}=#{@disk_opts[t_disk_opt]}"
     end
   end
 end
