(SIMP-2631) libvirt: Modernize and test
- Use kmod::load instead of ruby script for loading the kernel module
- Modernize some code
  - Moved all parameters to init.pp while also
    maintaining previous functionality
- Spec test cleanup
- New acceptance test (no nested virtualization)
- Corrected some documentation and examples

SIMP-2631 #close

--- a/templates/ksm.erb
+++ b/templates/ksm.erb
@@ -1,6 +1,6 @@
 # This file is managed by Puppet.
 # Any changes made to this file will be rewritten at the next Puppet run.
 
-<% if not @ksm_max_kernel_pages.nil? then -%>
+<% unless @ksm_max_kernel_pages.nil? -%>
 KSM_MAX_KERNEL_PAGES=<%= @ksm_max_kernel_pages %>
 <% end -%>
